app/frontend/entrypoints/compendium.scss
@import "@/breakpoints";
@import "@/colors";

body.compendium.show {
  .sidebar {
    position: sticky;
    top: 40px;
    bottom: 40px;

    @include small {
      border-radius: 0;
    }

    h3 {
      margin: 8px 0 24px;
      color: var(--color-panasonic);
    }

    ul {
      margin: 4px -8px 0;
      padding: 0;
      list-style: none;

      li {
        margin: 0;
        padding: 0;
        line-height: 1.3;
        position: relative;

        &.separator {
          height: 16px;
          display: flex;
          padding: 0;

          &:hover {
            background-color: transparent;
          }
        }

        svg.page {
          width: 16px;
          height: 16px;
          color: $indigo;
          position: absolute;
          top: 8px;
          left: 8px;
          pointer-events: none;
        }

        a {
          flex: auto;
          display: block;
          padding: 6px 12px 6px 32px;

          &:not(.current):hover {
            color: $indigo;
          }

          &.current {
            color: $black;
            cursor: default;
            pointer-events: none;
          }
        }

        input {
          display: none;
        }

        label {
          display: flex;
          padding: 4px;
          color: $indigo;
          cursor: pointer;
          position: absolute;
          left: 0;
          top: 0;

          &:hover {
            color: lighten($indigo, 15%);
          }

          svg {
            width: 24px;
            height: 24px;

            &.close {
              display: none;
            }
          }
        }

        .item-container {
          border-radius: 8px;
          display: flex;
          justify-content: stretch;

          &:hover {
            background-color: rgba($black, 5%);
          }
        }

        input:checked ~ .item-container {
          > label {
            svg {
              &.open {
                display: none;
              }

              &.close {
                display: block;
              }
            }
          }

          > ul {
            display: block;
          }
        }

        ul {
          margin: 2px 0 0;
          display: none;
        }

        input:checked ~ ul {
          display: block;
        }

        & + li {
          margin-top: 2px;
        }
      }

      &.indent-2 li {
        label {
          left: 20px;
        }

        svg.page {
          left: 28px;
        }

        a {
          padding-left: 52px;
        }
      }

      &.indent-3 li {
        label {
          left: 40px;
        }

        svg.page {
          left: 48px;
        }

        a {
          padding-left: 72px;
        }
      }

      &.indent-4 li {
        label {
          left: 60px;
        }

        svg.page {
          left: 68px;
        }

        a {
          padding-left: 92px;
        }
      }
    }
  }

  section.page {
    padding-left: 48px;

    h2,
    h3 {
      position: relative;
      margin-left: -24px;
      padding-left: 24px;
      // clear: both;

      > .section-anchor {
        position: absolute;
        left: -12px;
        display: flex;
        padding: 4px;
        visibility: hidden;
        color: $platinum;

        &:hover {
          color: $panasonic;
        }

        @include medium {
          display: none;
        }

        > svg {
          width: 16px;
          height: 16px;
          display: block;
        }
      }

      &:hover > a {
        visibility: visible;
      }
    }

    h2 > .section-anchor {
      top: 1px;
    }

    h3 > .section-anchor {
      top: -1px;
    }

    ul {
      padding-left: 24px;

      li {
        padding-left: 8px;
      }

      li + li {
        margin-top: 8px;
      }
    }

    aside {
      float: right;
      max-width: 25%;
      margin: -24px 0 36px 48px;

      a:first-child {
        display: block;
      }

      img {
        width: 100%;
      }

      p {
        margin-top: 8px;
        font-size: 14px;
      }
    }

    @include medium {
      padding-left: 0;
      margin-top: 24px;
    }
  }

  #link-icon {
    display: none;
  }
}

